test/sema/lambdas/cannot_unify_lambda_type_with_hint.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  let x: (unit) -> unit = ->(x: number){ return x; };
  // CHECK: [[# @LINE - 1 ]]:27: error: cannot unify 'unit' with 'number'
  // CHECK: [[# @LINE - 2 ]]:27: error: cannot unify '(unit) -> unit' with '(number) -> unit'
}
